# bareos

./: .bareos-check-sources-ignore  .check-sources-ignore  .clang-format  .cmake-format.py  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .matrix.yml  .quality-gates.yml  .travis.yml  0001-webui-fix-TypeError-in-RestoreForm-when-no-client-is.patch  AGENTS.md  AGPL-3.0.txt  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  CONTRIBUTION.md  COPYING  COPYRIGHT  CTestConfig.cmake  CTestCostData.txt  CTestCustom.cmake  CTestNDMPConfig.cmake.template  ChangeLog  CheckList  DartConfiguration.tcl.in  DartTestfile.txt.in  GNUmakefile.in  INSTALL  Jenkinsfile  LICENSE  LICENSE.template  LICENSE.txt  LICENSE.vadp  LICENSES_third_party.txt  (+89 more)
autoconf/: Make.common.in  acconfig.h  aclocal.m4  aclocal.m4.save  config.guess  config.h.in  config.h.in.save  config.sub  configure.in  install.sh  ltmain.sh  python.conf.py  randpass  randpass.awk  randpass.bc  who_and_what_of_libtool_patch
autoconf/bacula-macros/: compare-version.m4  db.m4  db.m4.old  largefiles.m4  os.m4
autoconf/bareos/: compare-version.m4  db.m4  largefiles.m4  os.m4
autoconf/gettext/: gettext.m4  iconv.m4
autoconf/gnome-macros/: Makefile.am  Makefile.in  aclocal-include.m4  autogen.sh  gnome-fileutils.m4  gnome-guile-checks.m4  gnome-pthread-check.m4  gnome-undelfs.m4  gnome-vfs.m4  gnome-x-checks.m4  gnome.m4  gperf-check.m4  linger.m4
contrib/: CMakeLists.txt  README.md
contrib/dir-plugins/: CMakeLists.txt
contrib/fd-plugins/: CMakeLists.txt  README.md
contrib/misc/: CMakeLists.txt  bconfig-service-bootstrap-default-config.sh
contrib/sd-plugins/: README.md
core/: .gitignore  AUTHORS  CMakeLists.txt  CTestConfig.cmake  CTestScript.cmake.in  LICENSE  README.NDMP  README.config  README.configsubdirectories  README.dbconfig  README.droplet  README.glusterfs  README.scsicrypto  README.storagebackend  git_changelog
core/cmake/: BareosCheckFunctions.cmake  BareosCheckIncludes.cmake  BareosCheckStructHasMembers.cmake  BareosCheckSymbols.cmake  BareosConfigureFile.cmake  BareosCopyDllsToBinDir.cmake  BareosDetermineHaveLowLevelScsiInterface.cmake  BareosExtractVersionInfo.cmake  BareosFindAllLibraries.cmake  BareosFindLibrary.cmake  BareosFindLibraryAndHeaders.cmake  BareosFindPrograms.cmake  BareosFindStaticCodeAnalysisTools.cmake  BareosGenerateDebianInfo.cmake  BareosGetDistInfo.cmake  BareosInstallConfigFiles.cmake  BareosInstallRequiredDlls.cmake  BareosLocalBuildDefinitions.cmake  BareosSetVariableDefaults.cmake  BareosTimeFunctions.cmake  BareosTypeSizes.cmake  BareosVersion.cmake  CMakeUserFindMySQL.cmake  CodeCoverage.cmake  FindLZO2.cmake  FindReadline.cmake  acltypes.cmake  bareos-symlink-default-db-backend.cmake  distname.sh  generate-debian-control.cmake.in  get_python_compile_settings.py  install-dird-configfiles.cmake  install-filed-configfiles.cmake  install-stored-configfiles.cmake  install-tray-monitor-configfiles.cmake  install-univention-extra-configuration.cmake  systemdservice.cmake  thread.cmake
core/debian/: bareos-common.docs  bareos-common.install.in  bareos-database-common.postrm  bareos-database-postgresql.install.in  bareos-database-tools.install.in  bareos-director.install.in  bareos-director.service.in  bareos-filedaemon-glusterfs-plugin.install.in  bareos-filedaemon-libcloud-python-plugin.install.in  bareos-filedaemon.postrm  bareos-tools.install.in  (+25 more)
examples/: .gitignore  AFS-README  Makefile  Makefile.am  README.cdmi  README.srws  afs-bacula  client-backup  idgetnoalloc.c  idrangetest.c  idtest.c  idtestbuffered2.c  idtestbuffered3.c  local_partitions  recover.pl  recurse.c  restrangetest.c  resttest.c  resttest_async.c  sample-query.sql  srwskey.c  ssh-tunnel.sh  timo.c  ukstest.c
libdroplet/: CMakeLists.txt  Makefile  Makefile.am
systemtests/: CMakeLists.txt  CTestCustom-win.cmake.in  CTestCustom.cmake.in  ctest_custom_posttest-win.sh.in  ctest_custom_posttest.sh.in  ctest_custom_pretest-win.sh.in  ctest_custom_pretest.sh.in  environment.in
tests/: 1-example-test  2drive-2disk  2drive-2job-test  2drive-3pool-test  2drive-concurrent-test  2drive-incremental-2disk  2drive-incremental-changer  2drive-offline-test  2drive-swap-test  Bootstrap.php  Makefile  Makefile.am  Makefile.am~  README  accurate-test  acl-xattr-test  action-on-purge-test  allowcompress-test  allowed-jobcommand-test  allowed-scriptdir-test  always-incremental-test  ansi-label-tape  auto-label-test  backup-bareos-client-initiated-connection-test  backup-bareos-passive-test  backup-bareos-tape  backup-bareos-test  backup-to-null  backup-win32-tape  bad-label-changer  bandwidth-limit-per-client-test  base-job-test  bconsole-test  bextract-test  big-files-test  big-fileset-test  big-virtual-changer-test  big-vol-test  block-size-tape  broken-media-bug-2-test  (+190 more)
tools/: Makefile  Makefile.am  cmd_attr.c  cmd_cd.c  cmd_copy.c  cmd_cp.c  cmd_genurl.c  cmd_get.c  cmd_getattr.c  cmd_la.c  cmd_lcd.c  cmd_ls.c  cmd_mb.c  cmd_mkdir.c  cmd_put.c  cmd_pwd.c  cmd_rawdel.c  cmd_rawget.c  cmd_rawhead.c  cmd_rawls.c  cmd_rawput.c  cmd_rb.c  cmd_rm.c  cmd_rmdir.c  cmd_set.c  cmd_setattr.c  cmd_unset.c  cmds.c  cmds.h  dpl_box.c  dpl_sh.c  dpl_sh.h  dplsh.c  dplsh.h  filecompl.c  sf2bacula_downloads.pl  shell.c  shell.h  usage.c  usage.h  (+6 more)
utests/: .gitignore  Makefile.am  addrlist_utest.c  dbuf_utest.c  dict_utest.c  droplet_utest.c  getdate_utest.c  ntinydb_utest.c  profile_utest.c  sbuf_utest.c  sproxyd_utest.c  taskpool_utest.c  testenv.sh  testutils.c  toyctl.c  toyctl.h  toyserver.c  toyserver.h  utest_main.c  utest_main.h  utest_utest.c  util_utest.c  util_utest.sh  valgrind.supp  vec_utest.c
webui/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README.md  autogen.sh  composer.json  configure  copyright  init_autoloader.php  phpunit.xml  version.php.in
webui-vue/: .gitignore  CMakeLists.txt  build-dist.cmake  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
(+12066 files in other folders)
